default type = vpn for ansible-linte

--- a/hetzner_server_management/create_server/create_server.yml
+++ b/hetzner_server_management/create_server/create_server.yml
@@ -9,7 +9,7 @@
       ansible.builtin.import_tasks: tasks/hetzner_management.yml
 
 - name: Initial config
-  hosts: hetzner_{{ type }}
+  hosts: hetzner_{{ type|default('vpn') }}
   become: true
   vars_files:
     - vars/vars.yml
